tests/baselines/reference/YieldExpression6_es6.errors.txt
error TS2318: Cannot find global type 'IterableIterator'.
tests/cases/conformance/es6/yieldExpressions/YieldExpression6_es6.ts(2,9): error TS2544: Type '() => any' is not an array type or does not have a '[Symbol.iterator]()' method that returns an iterator.


!!! error TS2318: Cannot find global type 'IterableIterator'.
==== tests/cases/conformance/es6/yieldExpressions/YieldExpression6_es6.ts (1 errors) ====
    function* foo() {
      yield*foo
            ~~~
!!! error TS2544: Type '() => any' is not an array type or does not have a '[Symbol.iterator]()' method that returns an iterator.
    }